--- a/kal.html
+++ b/kal.html
@@ -8,23 +8,23 @@
     h1 { text-align: center; color: #2A64AD; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
-    .kalendar-wrap { background: #e6edfa; border-radius: 16px; box-shadow: 0 0 14px #c3cbe1; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
+    .kalendar-wrap { background: #e6edfa; border-radius: 6px; box-shadow: 0 0 14px #c3cbe1; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #2A64AD; margin-bottom: 5px;}
-    .cell { min-height: 120px; background: white; border-radius: 10px; box-shadow: 0 0 6px #c3cbe1; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
+    .cell { min-height: 120px; background: white; border-radius: 4px; box-shadow: 0 0 4px #c3cbe1; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
     .names-list {margin: 3px 0 0 0; font-size: 13px;}
-    .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: center;}
+    .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: flex-start;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px;}
-    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 6px; }
-    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 6px;}
-    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 6px;}
-    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 6px;}
-    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 6px;}
-    .calendar-toolbar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;}
-    .month-select {font-size: 16px; border-radius: 6px; border:1px solid #aac2e4; padding:4px 9px;}
-    .calendar-title {font-size: 23px; font-weight: bold; color: #2A64AD;}
-    .pdf-btn, .print-btn { background:#2A64AD; color:white; border:none; border-radius:7px; font-size:15px; padding:7px 14px; margin-left: 7px; cursor:pointer;}
+    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 0; }
+    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 0;}
+    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 0;}
+    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 0;}
+    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 0;}
+    .calendar-toolbar { display: flex; justify-content: flex-start; align-items: center; margin-bottom: 12px;}
+    .month-select {font-size: 16px; border-radius: 4px; border:1px solid #aac2e4; padding:4px 9px;}
+    .calendar-title {font-size: 23px; font-weight: bold; color: #2A64AD; margin-left: 22px; text-align:left;}
+    .pdf-btn, .print-btn { background:#2A64AD; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
     .print-btn {background: #4DA86E;}
     .pdf-btn:hover, .print-btn:hover { filter:brightness(1.13);}
     @media (max-width:900px) {.calendar {font-size:12px; grid-template-columns: repeat(7, 1fr);}}
@@ -45,19 +45,21 @@
       <span style="color:#888;">Nahraj CSV export a udělej si přehled... Data zůstanou uložena v prohlížeči do přehrání dalším seznamem.</span>
     </div>
     <div class="kalendar-wrap" id="kalendarWrap" style="display:none;">
-      <div class="calendar-toolbar">
-        <select class="month-select" id="monthSelect"></select>
-        <span class="calendar-title" id="calendarTitle"></span>
-        <button class="pdf-btn" onclick="exportPDF()">Export PDF</button>
-        <button class="print-btn" onclick="printKalendar()">Tisk kalendáře</button>
-      </div>
-      <div class="print-area" id="calendarContainer"></div>
-      <div class="legend" id="legendBlock">
-        <div class="legend-item"><span class="abs-dov">DOV</span> Dovolená</div>
-        <div class="legend-item"><span class="abs-pul">D/2</span> 1/2 dovolené</div>
-        <div class="legend-item"><span class="abs-nem">NEM</span> Nemocenská</div>
-        <div class="legend-item"><span class="abs-lek">LEK</span> Lékař</div>
-        <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
+      <div class="print-area">
+        <div class="calendar-toolbar">
+          <select class="month-select" id="monthSelect"></select>
+          <span class="calendar-title" id="calendarTitle"></span>
+          <button class="pdf-btn" onclick="exportPDF()">Export PDF</button>
+          <button class="print-btn" onclick="printKalendar()">Tisk kalendáře</button>
+        </div>
+        <div id="calendarContainer"></div>
+        <div class="legend" id="legendBlock">
+          <div class="legend-item"><span class="abs-dov">DOV</span> Dovolená</div>
+          <div class="legend-item"><span class="abs-pul">D/2</span> 1/2 dovolené</div>
+          <div class="legend-item"><span class="abs-nem">NEM</span> Nemocenská</div>
+          <div class="legend-item"><span class="abs-lek">LEK</span> Lékař</div>
+          <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
+        </div>
       </div>
     </div>
   </div>
