--- a/kal.html
+++ b/kal.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <title>Kalendář</title>
   <style>
-    body { background: #2A64AD; font-family: 'Open Sans', sans-serif; color: #FFFFFF; margin: 0; padding: 0;}
+    body { background: #0066b3; font-family: 'Open Sans', sans-serif; color: #FFFFFF; margin: 0; padding: 0;}
     h1 { text-align: center; color: #FFFFFF; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
-    .kalendar-wrap { background: #e6edfa; border-radius: 6px; box-shadow: 0 0 14px #c3cbe1; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
+    .kalendar-wrap { background: #e6edfa; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
-    .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #2A64AD; margin-bottom: 5px;}
+    .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
     .cell { min-height: 120px; background: white; border-radius: 4px; box-shadow: 0 0 4px #c3cbe1; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
     .names-list {margin: 3px 0 0 0; font-size: 13px;}
     .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: flex-start;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px;}
-    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 0; }
-    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 0;}
-    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 0;}
-    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 0;}
-    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 0;}
+    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 1; }
+    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 1;}
+    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 1;}
+    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 1;}
+    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 1;}
     .calendar-toolbar { display: flex; justify-content: flex-start; align-items: center; margin-bottom: 12px;}
-    .month-select {font-size: 16px; border-radius: 4px; border:1px solid #aac2e4; padding:4px 9px;}
-    .pdf-btn, .print-btn { background:#2A64AD; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
+    .month-select {font-size: 16px; border-radius: 5px; border:2px solid #2A64AD; padding:4px 9px;}
+    .pdf-btn, .print-btn { background:#0066b3; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
     .print-btn {background: #4DA86E;}
     .pdf-btn:hover, .print-btn:hover { filter:brightness(1.13);}
-    .print-title {font-size: 23px; font-weight: bold; color: #2A64AD; margin-bottom: 14px; text-align:left;}
+    .print-title {font-size: 23px; font-weight: bold; color: #0066b3; margin-bottom: 14px; text-align:left;}
     @media (max-width:900px) {.calendar {font-size:12px; grid-template-columns: repeat(7, 1fr);}}
     @media print {
       body * { visibility: hidden; }
@@ -38,12 +38,10 @@
   </style>
 </head>
 <body>
-  <h1>Měsíční kalendář absencí (CSV → kalendář)</h1>
+  <h1>Kalendář</h1>
   <div class="center">
     <div class="upload-block">
-      <input type="file" id="csvInput" accept=".csv" />
-      <br><br>
-      <span style="color:#d1ebff;">Nahraj CSV export z KS a udělej si přehled...</span>
+      <input type="file" id="csvInput" accept=".csv" /><span style="color:#d1ebff;">Nahraj CSV export z KS a udělej si přehled...</span>
     </div>
     <div class="kalendar-wrap" id="kalendarWrap" style="display:none;">
       <div class="calendar-toolbar">
