--- a/kal.html
+++ b/kal.html
@@ -11,18 +11,18 @@
     .kalendar-wrap { background: #e6edfa; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
-    .cell { min-height: 120px; background: white; border-radius: 4px; box-shadow: 0 0 4px #c3cbe1; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
+    .cell { min-height: 120px; background: white; color: border-radius: 5px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
     .names-list {margin: 3px 0 0 0; font-size: 13px;}
     .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: flex-start;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px;}
-    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 1; }
-    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 1;}
-    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 1;}
-    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 1;}
-    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 1;}
+    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 2; }
+    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 2;}
+    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 2;}
+    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 2;}
+    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 2;}
     .calendar-toolbar { display: flex; justify-content: flex-start; align-items: center; margin-bottom: 12px;}
-    .month-select {font-size: 16px; border-radius: 5px; border:2px solid #2A64AD; padding:4px 9px;}
+    .month-select {font-size: 16px; border-radius: 5px; border:2px solid #DB4B3E; padding:4px 9px;}
     .pdf-btn, .print-btn { background:#0066b3; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
     .print-btn {background: #4DA86E;}
     .pdf-btn:hover, .print-btn:hover { filter:brightness(1.13);}
@@ -41,7 +41,7 @@
   <h1>Kalendář</h1>
   <div class="center">
     <div class="upload-block">
-      <input type="file" id="csvInput" accept=".csv" /><span style="color:#d1ebff;">Nahraj CSV export z KS a udělej si přehled...</span>
+      <span style="color:#d1ebff;">Nahraj CSV export z KS a udělej si přehled...</span><input type="file" id="csvInput" accept=".csv" />
     </div>
     <div class="kalendar-wrap" id="kalendarWrap" style="display:none;">
       <div class="calendar-toolbar">
