--- a/kal.html
+++ b/kal.html
@@ -11,11 +11,11 @@
     .kalendar-wrap { background: #e6edfa; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
-    .cell { min-height: 120px; background: white; color: border-radius: 5px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
+    .cell { min-height: 120px; background: white; color: #444; border-radius: 15px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
     .names-list {margin: 3px 0 0 0; font-size: 13px;}
     .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: flex-start;}
-    .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px;}
+    .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px; color: #444;}
     .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 2; }
     .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 2;}
     .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 2;}
