--- a/kal.html
+++ b/kal.html
@@ -13,27 +13,39 @@
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
     .cell { min-height: 120px; background: white; color: #444; border-radius: 10px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
-    .names-list {margin: 4px 0 0 0; font-size: 10px;}
+    .names-list {margin: 4px 0 0 0; font-size: 12px;}
     .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: flex-start;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px; color: #444;}
-    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 2; }
-    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 2;}
-    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 2;}
-    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 2;}
-    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 2;}
+    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 2px; }
+    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 2px;}
+    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 2px;}
+    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 2px;}
+    .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 2px;}
     .calendar-toolbar { display: flex; justify-content: flex-start; align-items: center; margin-bottom: 12px;}
     .month-select {font-size: 16px; border-radius: 5px; border:2px solid #DB4B3E; padding:4px 9px;}
-    .pdf-btn, .print-btn { background:#0066b3; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
-    .print-btn {background: #4DA86E;}
-    .pdf-btn:hover, .print-btn:hover { filter:brightness(1.13);}
+    .print-btn {background: #4DA86E; color:white; border:none; border-radius:4px; font-size:15px; padding:7px 14px; margin-left: 12px; cursor:pointer;}
+    .print-btn:hover { filter:brightness(1.13);}
     .print-title {font-size: 23px; font-weight: bold; color: #0066b3; margin-bottom: 14px; text-align:left;}
+    .print-logo { display: none; }
     @media (max-width:900px) {.calendar {font-size:12px; grid-template-columns: repeat(7, 1fr);}}
     @media print {
+      body, html { background: #fff !important; }
       body * { visibility: hidden; }
       .print-area, .print-area * { visibility: visible !important;}
-      .print-area { position: absolute; left: 0; top: 0; width: 100vw; background: white;}
+      .print-area { 
+        position: absolute; left: 0; top: 0; width: 100vw; background: white !important; 
+        min-height: 99vh;
+      }
       .calendar-toolbar, .upload-block, h1 {display:none !important;}
       .print-title {display: block !important;}
+      .print-logo {
+        display: block !important;
+        position: absolute;
+        right: 35px;
+        bottom: 22px;
+        width: 110px;
+        opacity: 0.8;
+      }
     }
   </style>
 </head>
@@ -46,7 +58,6 @@
     <div class="kalendar-wrap" id="kalendarWrap" style="display:none;">
       <div class="calendar-toolbar">
         <select class="month-select" id="monthSelect"></select>
-        <button class="pdf-btn" onclick="exportPDF()">Export PDF</button>
         <button class="print-btn" onclick="printKalendar()">Tisk kalendáře</button>
       </div>
       <div class="print-area" id="printArea">
@@ -59,10 +70,10 @@
           <div class="legend-item"><span class="abs-lek">LEK</span> Lékař</div>
           <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
         </div>
+        <img src="static/logo.png" class="print-logo" alt="Logo">
       </div>
     </div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     const absenceTypes = {
       'NEM':  { label: 'NEM',   cls: 'abs-nem', name: 'Nemocenská', order: 1 },
@@ -178,23 +189,6 @@
 
     function printKalendar() {
       window.print();
-    }
-
-    function exportPDF() {
-      import('https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js').then(html2canvas => {
-        html2canvas = html2canvas.default;
-        let area = document.getElementById('printArea');
-        let calTitle = document.getElementById('printTitle').innerText;
-        html2canvas(area, {backgroundColor: "#fff"}).then(canvas => {
-          let imgData = canvas.toDataURL('image/png');
-          const pdf = new window.jspdf.jsPDF({orientation:'landscape', unit:'pt', format:'a4'});
-          let width = pdf.internal.pageSize.getWidth();
-          let imgWidth = width - 80;
-          let imgHeight = canvas.height * (imgWidth / canvas.width);
-          pdf.addImage(imgData, 'PNG', 40, 34, imgWidth, imgHeight);
-          pdf.save('kalendar-' + calTitle.replace(" ","_") + '.pdf');
-        });
-      });
     }
 
     function parseCSV(csv) {
